# wasm-instrument

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml
benches/: benches.rs  execution.rs  instrumentation.rs
benches/fixtures/: contract_transfer.wasm  erc20.wasm  many_blocks.wasm  multisig.wasm  trait_erc20.wasm
benches/fixtures/wasm/: contract_terminate.wasm  dns.wasm  erc1155.wasm  erc721.wasm  proxy.wasm  rand_extension.wasm  wasm_kernel.wasm
benches/fixtures/wat/: count_until.wat
src/: export_globals.rs  lib.rs
src/gas_metering/: backend.rs  host_func.rs  mod.rs  mut_global.rs  validation.rs
src/stack_limiter/: max_height.rs  mod.rs  thunk.rs
tests/: diff.rs  overhead.rs
tests/expectations/gas/: branch.wat  branch_host_fn.wat  branch_mut_global.wat  call.wat  call_host_fn.wat  call_mut_global.wat  ifs.wat  ifs_host_fn.wat  ifs_mut_global.wat  simple.wat  simple_mut_global.wat  start.wat  start_host_fn.wat  start_mut_global.wat
tests/expectations/stack-height/: empty_functions.wat  global.wat  imports.wat  many_locals.wat  simple.wat  start.wat  table.wat
tests/fixtures/stack-height/: global.wat  table.wat
